Implemented Place feature with Geolatte and completed integration tests